Closed Bug 1071465 Opened 10 years ago Closed 10 years ago

old precomplete file is not removed on update

Categories

(Toolkit :: Application Update, defect)

All
macOS
defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla35
Tracking Status
firefox34 --- fixed
firefox35 --- fixed

People

(Reporter: robert.strong.bugs, Assigned: robert.strong.bugs)

References

Details

Attachments

(1 file)

Since staging only copies over the Contents directory it leaves behind everything in the root of the app bundle and the precomplete file is left behind.
Assignee: nobody → robert.strong.bugs
Blocks: 1047584
Status: NEW → ASSIGNED
OS: Windows 8.1 → Mac OS X
Hardware: x86_64 → All
Attached patch patch rev1Splinter Review
Turns out that the removal in the root of the bundle won't happen when performing a replace request since it only works from the Contents directory. I also noticed that the distribution directory was moved when staging an update which would not be a good thing since the original app is still in use.

Pushed to oak
https://hg.mozilla.org/projects/oak/rev/a55e8d9671db
Attachment #8493591 - Flags: review?(spohl.mozilla.bugs)
Attachment #8493591 - Flags: review?(spohl.mozilla.bugs) → review+
https://hg.mozilla.org/mozilla-central/rev/4932dbbc1cc8
Status: ASSIGNED → RESOLVED
Closed: 10 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla35
Landed on aurora in the Mac V2 signing combined patch in bug 1047584
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: