Mac v2 signing - Bug 1071465 - old precomplete file is not removed on update. r=spohl